external-crates/move/crates/move-compiler/tests/move_2024/naming/syntax_annotation_invalid.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E02015]: invalid attribute
  ┌─ tests/move_2024/naming/syntax_annotation_invalid.move:5:7
  │
5 │     #[syntax]
  │       ^^^^^^ Attribute 'syntax' does not support name-only usage. Expected parameterized attribute as '#[syntax(<kind>)]'

error[E02015]: invalid attribute
  ┌─ tests/move_2024/naming/syntax_annotation_invalid.move:8:14
  │
8 │     #[syntax(index(A))]
  │              ^^^^^^^^ Attribute 'index' does not support parameters. Expected name only, as 'index'

error[E02015]: invalid attribute
   ┌─ tests/move_2024/naming/syntax_annotation_invalid.move:14:7
   │
14 │     #[syntax = index]
   │       ^^^^^^^^^^^^^^ Attribute 'syntax' does not support assignment. Expected parameterized attribute as '#[syntax(<kind>)]'

error[E02015]: invalid attribute
   ┌─ tests/move_2024/naming/syntax_annotation_invalid.move:17:14
   │
17 │     #[syntax(index = foo)]
   │              ^^^^^^^^^^^ Attribute 'index' does not support assignment. Expected name only, as 'index'

error[E02015]: invalid attribute
   ┌─ tests/move_2024/naming/syntax_annotation_invalid.move:22:7
   │
22 │     #[syntax(index, index)]
   │       ^^^^^^^^^^^^^^^^^^^^ Attribute syntax expects exactly one argument, found 2.
